# webcal-combiner

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MIGRATION.md  README.md  app.py  combine_calendars.py  config.json.example  docker-compose.yml  requirements.txt
src/: calendar.rs  config.rs  main.rs
