[package]
name = "webcal-combiner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "set-header"] }

# HTTP client
reqwest = { version = "0.12", features = ["blocking"] }

# iCalendar parsing
icalendar = { version = "0.16", features = ["parser"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Caching
moka = { version = "0.12", features = ["future"] }

# Security (constant-time comparison)
subtle = "2.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
