[package]
name = "webcal-combiner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
moka = { version = "0.12.7", features = ["future"] }
regex = "1"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
subtle = "2.5.0"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
